# graspologic

./: .all-contributorsrc  .buildinfo  .coveragerc  .gitattributes  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  AdjacencySpectralEmbed.ipynb  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  HSBM.py  MANIFEST.in  Makefile  README.md  ROLES.md  actionRuns.json  buildReleaseNotes.py  genindex.html  getActionRuns.sh  index.html  license.html  mypy.ini  objects.inv  paper.md  procrustes_testing.ipynb  py-modindex.html  pyproject.toml  pytest.ini  refs.bib  refs_joss.bib  release.rst  requirements.txt  searchindex.js  semipar_demonstration_testing.ipynb  setup.cfg  setup.py  test-seeds.py  (+1 more)
.devops/: README.md  common-build.yml  scan-and-register.yml
.doctrees/: index.doctree
.doctrees/reference/: cli.doctree  contributing.doctree  in-the-wild.doctree  index.doctree
.doctrees/tutorials/: index.doctree
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  usage-question.md
.github/scripts/: build_release_notes.py  prepend_file.py
.github/workflows/: automate-release-notes.yml  build.yml  docsite.yml  publish.yml  release-drafter.yml  report.yml
0.3.1/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
0.3.1/.doctrees/: index.doctree
0.3.1/_modules/: index.html
0.3.1/reference/: cli.html  contributing.html  in-the-wild.html  index.html  install.html  release.html
0.3.1/tutorials/: index.html
1.0.0/: index.html  license.html  search.html  searchindex.js
1.0.0/_modules/: index.html
1.0.0/reference/: cli.html  contributing.html  release.html
1.0.0/tutorials/: index.html
2.0.0/: index.html  license.html  py-modindex.html  search.html  searchindex.js
2.0.0/reference/: cli.html  index.html  install.html  release.html
2.0.1/: genindex.html  index.html  license.html  objects.inv  py-modindex.html
2.0.1/.doctrees/: index.doctree
2.0.1/_modules/: index.html
2.0.1/reference/: cli.html  contributing.html  index.html  install.html  release.html
2.0.1/tutorials/: index.html
3.0.0/: genindex.html  index.html  license.html  objects.inv  search.html  searchindex.js
3.0.0/_modules/: index.html
3.0.0/reference/: cli.html  release.html
3.1.0/: genindex.html  objects.inv
3.1.0/_modules/: index.html
3.1.0/reference/: cli.html  contributing.html  index.html  release.html
3.2.0/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
3.2.0/.doctrees/: license.doctree
3.2.0/reference/: cli.html  index.html  install.html
3.2.0/tutorials/: index.html
3.3.0/: .buildinfo  index.html  search.html
3.3.0/.doctrees/: license.doctree
3.3.0/reference/: in-the-wild.html  release.html
_modules/graspologic/: preconditions.html
_sources/reference/: in-the-wild.rst.txt
dfrancisco1998-tests/: Simulations.ipynb  embeddings_tuts.ipynb  inference.ipynb  matching.ipynb  models.ipynb  plotting.ipynb  python3.8-compliance_check.txt  python3.8-compliance_error.txt
docs/: CNAME  Makefile  README.md  bibliography.rst  build_docs.sh  conf.py  contributing.rst  index.rst  install.rst  license.rst  news.rst  release.rst  requirements.txt  tutorial.rst
docs/_templates/: footer.html
docs/readTheDocs/: conf.py  index.rst
docs/reference/: Makefile  align.rst  cli.rst  cluster.rst  conf.py  contributing.rst  datasets.rst  embed.rst  in-the-wild.rst  index.rst  inference.rst  install.rst  layouts.rst  match.rst  models.rst  models_ER_eg.py  nominate.rst  nomination.rst  partition.rst  pipeline.rst  plotting.rst  preprocessing.rst  release.rst  simulations.rst  subgraph.rst  utils.rst
docs/release/: graspologic_release_0.1.x.rst  release_0.0.1.rst  release_0.0.2.rst  release_0.0.3.rst  release_0.1.rst  release_0.2.rst  release_0.3.rst  release_template.rst
docs/sphinx-ext/: toctree_filter.py
docs/tutorials/: Vertex.ipynb  conf.py  index.rst  requirements.txt
graphstats/embed/: __init__.py  ase.py  dimselect.py  embed.py  lpm.py  lse.py  mds.py  omni.py  svd.py
graphstats/inference/: semipar.py
graphstats/simulations/: simulations.py
graphstats/utils/: utils.py
graspologic/: __init__.py  preconditions.py  types.py  version.py
graspologic/align/: __init__.py  base.py  orthogonal_procrustes.py  seeded_procrustes.py  seedless_procrustes.py  sign_flips.py
graspologic/bilateral_connectome/: __init__.py  binomial.py  combine.py  er.py  rdpg.py  sbm.py  testscript.py  utils.py
graspologic/cluster/: __init__.py  autogmm.py  base.py  divisive_cluster.py  gclust.py  kclust.py  rclust.py
graspologic/datasets/: __init__.py  base.py
graspologic/embed/: __init__.py  ase.py  base.py  casc.py  case.py  gee.py  lse.py  mase.py  mds.py  (+4 more)
graspy/: __init__.py
latest/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
pre-release/: .buildinfo  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js
reference/: cli.html  contributing.html  in-the-wild.html  index.html  install.html  release.html
tests/: .#test_latentdistributiontest.py  test_affinity.py  test_ase.py  test_base_embed.py  test_casc.py  test_coherence.py  test_covarites_assisted_embed.py  test_datasets.py  test_dimselect.py  test_er_and_group_connection_tests.py  test_gclust.py  test_inference.py  test_io.py  test_itscreen.py  test_kclust.py  test_latentdistributiontest.py  test_latentpositiontest.py  test_latentstructure.py  test_ldt_function.py  test_lpm.py  test_lpt_function.py  test_mase.py  test_match.py  test_matchedtest.py  test_mds.py  test_models.py  test_mug2vec.py  test_n2v.py  test_nonitscreen.py  test_nonpar.py  test_omni.py  test_oos.py  test_orthogonal_procrustes.py  test_plot.py  test_plot_matrix.py  test_preconditions.py  test_ptr.py  test_rdpg_corr.py  test_sample_edges_corr.py  test_screen.py  (+22 more)
tutorials/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  search.html  searchindex.js
(+2048 files in other folders)
