[tool.poetry]
name = "graspologic"
version = "3.3.0"
description = "A set of Python modules for graph statistics"
repository = "https://github.com/microsoft/graspologic"
authors = [
    "Eric Bridgeford", 
    "Jaewon Chung <j1c@jhu.edu>", 
    "Benjamin Pedigo", 
    "Bijan Varjavand",
]
maintainers = [
    "Dax Pryce <daxpryce@microsoft.com>"
]
license = "MIT"
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
include = [
    "graspologic",
    "graspologic/**/*.typed",
    "graspologic/datasets/**/*.edgelist",
    "graspologic/datasets/**/*.csv",
    "graspologic/layouts/include/**/colors-100.json"
]
exclude = [
    "tests"
]

[tool.poetry.dependencies]
python = "^3.8"
anytree = "^2.8.0"
beartype = "^0.10.0"
gensim = "^4.0.0,!=4.2.0"
graspologic-native = "^1.1.1"
hyppo = "^0.3.2"
joblib = "^0.17.0"
matplotlib = "^3,!=3.3.*,!=3.6.1"
networkx = "^2.1"
numpy = "^1.11.0"
POT = "^0.7.0"
seaborn = "^0.11.0"
scikit-learn = "^1"
scipy = "^1.9.0,<1.13.0"
statsmodels = "^0.13.2"
typing-extensions = "^4.4.0"
umap-learn = "^0.4.6"

[tool.poetry.group.dev.dependencies]
ipykernel = "^5.1.0"
ipython = "^7.4.0,!=8.7.0" # https://github.com/spatialaudio/nbsphinx/issues/687#issuecomment-1339271312
isort = "^5.9.3"
mypy = "^0.910"
nbsphinx = "^0.8.7"
numpydoc = "^1.1.0"
pandoc = "^1.1.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
sphinx = "^4.2.0"
sphinxcontrib-rawfiles = "^0.1.1"
sphinx-rtd-theme = "^1.0.0"
testfixtures = "^6.18.3"
pipdeptree = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
_black = "black ./graspologic ./tests"
_isort = "isort ./graspologic ./tests"
_black_check = "black --check --diff ./graspologic ./tests"
_isort_check = "isort --check-only ./graspologic ./tests"
clean = "rm -rf docs/_build"
type_check = "mypy ./graspologic"

# Formatting 
format = ["_black", "_isort"]
format_check = ["_black_check", "_isort_check"]

# Docs Tasks
docs = "sphinx-build -W -a docs/ docs/_build/html"
docsWithTutorials = "sphinx-build -W -t build_tutorials -a docs/ docs/_build/html"

# Testing Tasks
tests = "pytest tests"
coverage = "python -m pytest --co --cov=graspologic graspologic tests"
fast_test = "pytest tests --ignore=tests/test_latentdistributiontest.py --ignore=tests/test_latentpositiontest.py"

lint = ["format_check", "type_check"]
validate = ["lint", "coverage", "docs", "tests"]

[tool.isort]
profile = "black"
multi_line_output = 3
