[metadata]
name = graspologic
version = 0.2.0

description = A set of python modules for graph statistics
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Bridgeford, Jaewon Chung, Benjamin Pedigo, Bijan Varjavand
author_email = j1c@jhu.edu
maintainer = Dwayne Pryce
maintainer_email = dwpryce@microsoft.com
url = https://github.com/microsoft/graspologic
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
include_package_data = True
install_requires =
    anytree>=2.8.0
    gensim>=3.8.0,<=3.9.0  # methods signatures changed in the 4.0.0beta release
    graspologic-native
    hyppo==0.1.3 # Newer versions of hyppo cause issue #659.
    joblib>=0.17.0  # Older versions of joblib cause issue #806.  Transitive dependency of hyppo.
    matplotlib>=3.0.0,<=3.3.0
    networkx>=2.1
    numpy>=1.8.1
    POT>=0.7.0
    seaborn>= 0.11.0
    scikit-learn>=0.22.0
    scipy>=1.4.0
    umap-learn>=0.4.6

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
     black
     ipykernel>=5.1.0
     ipython>=7.4.0
     mypy
     nbsphinx
     numpydoc
     pandoc
     pytest
     pytest-cov
     sphinx
     sphinxcontrib-rawfiles
     sphinx-rtd-theme
     testfixtures

