[metadata]
name = graspologic
version = 1.0.1

description = A set of python modules for graph statistics
long_description = file: README.md
long_description_content_type = text/markdown
author = Eric Bridgeford, Jaewon Chung, Benjamin Pedigo, Bijan Varjavand
author_email = j1c@jhu.edu
maintainer = Dax Pryce
maintainer_email = daxpryce@microsoft.com
url = https://github.com/microsoft/graspologic
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Mathematics
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
include_package_data = True
python_requires = >=3.7, <3.10
install_requires =
    anytree>=2.8.0
    beartype>=0.10.0 
    gensim>=4.0.0
    graspologic-native>=1.1.1
    hyppo>=0.3.2 # bug with lower versions and scipy>=1.8
    joblib>=0.17.0  # Older versions of joblib cause issue #806.  Transitive dependency of hyppo.
    matplotlib>=3.0.0,!=3.3.*
    networkx>=2.1
    numpy>=1.8.1
    POT>=0.7.0
    seaborn>= 0.11.0
    scikit-learn>=0.22.0
    scipy>=1.4.0
    umap-learn>=0.4.6
    setuptools>=61.0.0

[options.packages.find]
exclude =
    tests

[options.extras_require]
dev =
     black
     ipykernel>=5.1.0
     ipython>=7.4.0
     isort>=5.9.3
     mypy>=0.910
     nbsphinx>=0.8.7
     numpydoc>=1.1.0
     pandoc>=1.1.0
     pytest>=6.2.5
     pytest-cov>=3.0.0
     sphinx>=4.2.0
     sphinxcontrib-rawfiles>=0.1.1
     sphinx-rtd-theme>=1.0.0
     testfixtures>=6.18.3

